--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
-numpy>=1.9
-tqdm>=4.2
-opencv-python>=3.1
-future>=0.16
-moviepy==1.0.3
+# python3.7.9
+
+
+tqdm               ==4.61.2
+moviepy            ==1.0.3
+numpy              ==1.21.0
+opencv-python      ==4.5.3.56
+joblib            ==1.0.1
+numpy             ==1.21.0
+Pillow            ==8.3.1
+pip               ==21.1.3
+scikit-learn      ==0.24.2
+scipy             ==1.7.0
+setuptools        ==57.1.0
+threadpoolctl     ==2.2.0
+torch             ==1.9.0
+torchvision       ==0.10.0
+typing-extensions ==3.10.0.0
+wheel             ==0.36.2
+tensorflow        ==1.15.0
+wrapt             ==1.12.1
+pytorch-swats     ==0.1.0
+pyyaml            == 5.4.1
+fvcore            == 0.1.5
+
+
 
