--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-/data/data-clean/
+data/*
+out/*
+.idea/*
+data/**/*.zip
+data/**/*.pcap
+data/**/*.jpeg
+
+features/video/slim/*
+features/video/*.pb
+
+models/cnn_bert/checkpoint/*
+models/cnn_bert/datasets/refrigerator_frames/*
+models/cnn_bert/weights/*
+
+
+*.mp4
+*.mkv
+*.avi
+*.pth
+*.tar
+*.npy
+*.dat
+*.csv
+*.wav
+
