--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ tqdm               ==4.61.2
 moviepy            ==1.0.3
 numpy              ==1.21.0
 opencv-python      ==4.5.3.56
+opencv-contrib-python == 4.5.3.56
 joblib            ==1.0.1
 numpy             ==1.21.0
+openpyxl          ==3.0.7
 Pillow            ==8.3.1
 pip               ==21.1.3
 scikit-learn      ==0.24.2
@@ -21,7 +23,9 @@ tensorflow        ==1.15.0
 wrapt             ==1.12.1
 pytorch-swats     ==0.1.0
 pyyaml            == 5.4.1
-fvcore            == 0.1.5
+fvcore            ==0.1.5.post20210730
+matplotlib        ==3.4.2
+seaborn           ==0.11.1
 
 
 
